--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rancid",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://gaj23.github.io/rancid/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -14,6 +15,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^6.4.0"
+    "cypress": "^6.4.0",
+    "gh-pages": "^3.1.0"
   }
 }
